--- a/ToDoList/index.html
+++ b/ToDoList/index.html
@@ -14,7 +14,10 @@
 <body>
    
     <header>
-        <h1>Christine's To-Do List</h1>
+        <h1>Christine's To-Do List!</h1>
+        
+        <img class="im" src="memo.png" alt="logo"/>
+        
     </header>
     <form>
         <input type="text" class="todo-input">
